--- a/sanity-yt-build/package.json
+++ b/sanity-yt-build/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@sanity/cli": "^2.35.0",
+    "@sanity/image-url": "^1.0.1",
     "next": "latest",
     "next-sanity": "^1.0.9",
     "react": "18.2.0",
